--- a/source/css/_base.scss
+++ b/source/css/_base.scss
@@ -22,6 +22,7 @@ body {
   line-height: $body-l;  
   color: $base-color;
   @include pt;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, p, ul, ol, blockquote {
