--- a/source/css/_moment.scss
+++ b/source/css/_moment.scss
@@ -1,5 +1,6 @@
 #moment {
   position: relative;
+  z-index: -1;
   height: 1400px;
   > div {
     margin-left: -203.5px;
